--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,29 @@
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      .container{
+          flex: 1;
+      }
+
+      .toolbar{
+          height: 80px;
+      }
+
+      .main{
+          fluid: 1;
+      }
+
+    </style>
   </head>
   <body>
     <div class="main">
+        <div class="container">
+            <nav class="toolbar">
+                <main class="main">
+                </main>
+            </nav>
+        </div>
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
