--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       .container{
-          flex: 1;
+         display: flex;
       }
 
       .toolbar{
